# fake-news-detector-etl-pipeline

./: .gitignore  FAKE_NEWS_DETECTOR_MANUAL.md  README.md  USER_MANUAL.md  config.py  pyproject.toml
api/: main.py
etl/: extract.py  load.py  transform.py
fake-news-web/: package-lock.json  package.json
fake-news-web/app/: page.js
fakenews_etl/: __init__.py  cli.py
model/: train.py
